edited built.sbt